== 1.5.8 released 2008-11-30

* Removed array support for groups, arrays will set conditions, not create multiple groups. If you need to create multiple groups you will have to pass an array with multiple {:group => my_groups} hashes.
* Fixed issues with using name spaced models.

== 1.5.7 released 2008-11-30

* Fixed how grouping works, you can now specify "and_group" and "or_group", just like you can with conditions.
* Specifying a join type will take priority. So "and_name_like" will ALWAYS join with AND, even is any = true for the search.

== 1.5.6 released 2008-11-29

* The order conditions are set is now relevant and will be reflected in the SQL. Setting a condition first will make it first in the SQL, setting a condition last will make it last in the SQL.
* The above allows for prefixing any condition with and_ or or_. Thus letting you create somewhat more complex queries, since the order matters.
* Added ability to group conditions to mimic parenthesis in raw SQL.
* Major clean up in the Searchlogic::Conditions name space: faster, smaller, cleaner, and modular.

== 1.5.5 released 2008-11-17

* Cleaned up class_name configuration for helpers, so that setting them to nil disables the class name
* Added page_links_div_wrapper and page_links_div_wrapper_class_name configuration option to add an wrapping div around page_links
* Added page_links_act_like_will_paginate configuration option to help with the transition from will_paginate

== 1.5.4 released 2008-11-16

* Removed subclass requirement for adding conditions in Conditions::Base
* Removed DISTINCT in the select clause, instead called uniq! on the results. PostgreSQL complains about DISTINCT and AR uses uniq! when using :includes, so this is the best option.
* Converted the return for SQLite's strftime to integer from string. This way day of month, day of year, etc works as expected.

== 1.5.3 released 2008-10-30
